--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,9 +5,9 @@ RUN apk add --no-cache make gcc g++ python
 COPY yarn.lock yarn.lock
 COPY package.json package.json
 
-RUN npm install
+RUN yarn install
 COPY . .
-RUN npm run build
+RUN yarn run build
 
 FROM node:12-alpine
 COPY --from=build dist dist
